--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ nav{
     display: flex;
     list-style: none;
     justify-content: space-between;
+    align-items: center;
     padding-right: 10rem;
 }
 
@@ -53,24 +54,23 @@ nav{
 }
 
 .logo{
-    height: 15rem;
+    height: 10rem;
     padding: 1rem;
     padding-left: 4rem;
 }
 
-main{
-    padding: 4rem;
-}
-
 .sections{
     margin-bottom: 10rem;
+    margin: 4rem;
 }
 
 .section1{
     height: 75rem;
-    background-image: url(/img/joystick-game-sport-technology_138676-2045.avif);
+    background-image: url(/img/wallpaper2.jpg);
     background-size: 100vw 75rem;
     background-repeat: no-repeat;
+    margin: 0;
+    margin-top: 4rem;
 }
 
 .slogan{
@@ -81,7 +81,7 @@ main{
     align-items: flex-start;
     font-size: 10rem;
     color: #000000;
-    margin-left: 5rem;
+    padding-left: 8rem;
 }
 
 .button1{
@@ -91,6 +91,7 @@ main{
     border-radius: 0.1rem;
     padding: 1.5rem 8rem 1.5rem 8rem;
     font-size: 5rem;
+    margin-top: 7rem;
 }
 
 .button1:hover{
@@ -100,51 +101,66 @@ main{
 
 .section2{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    padding: 8rem 4rem 4rem 4rem;
-    max-height: 90rem;
-    gap: 5rem;
+    grid-template-rows: repeat(2, 1fr);
+    padding: 4rem;
+    gap: 4rem;
 }
 
 .top{
-    grid-column: 1/5;
     grid-row: 1/3;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-    gap: 17rem;
+    gap: 16rem;
 }
 
 .topImage{
-    height: 130%;
+    height: 50rem;
+    object-fit: contain;
+    border-radius: 0.2rem;
 }
 
 .text{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 50%;
-    padding-right: 10rem;
-    font-size: 3rem;
+    width: 30%;
+    font-size: 2.5rem;
     gap: 1rem;
+    padding: 2rem;
+    box-shadow: 1rem 1rem 5rem 0 rgba(0, 0, 0, 0.2);
 }
 
 .text h2{
     font-size: 6rem;
 }
 
+.button2{
+    text-decoration: none;
+    color: #fff;
+    background: #212121;
+    border-radius: 0.1rem;
+    padding: 1.5rem 6.8rem 1.5rem 6.8rem;
+    font-size: 5rem;
+    margin-top: 7rem;
+}
+
+.button2:hover{
+    background: #313131;
+}
+
 .bottom{
-    grid-column: 1/5;
-    grid-row: 3/5;
+    grid-row: 3/4;
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 4rem;
+    gap: 4.7rem;
+    flex-wrap: wrap;
 }
 
 .bottomImages{
-    height: 80%;
+    height: 30rem;
+    object-fit: contain;
+    border-radius: 0.2rem;
 }
 
 
@@ -179,15 +195,27 @@ main{
 
 .section4{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 1rem 15rem 1rem 10rem;
     font-size: 150%;
-    
+    gap: 15rem;
+    margin-bottom: 10rem;
+}
+
+.section4 img{
+    height: 80rem;
+    border-radius: 0.2rem;
 }
 
 .section4 figure{
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
+    box-shadow: 1rem 1rem 5rem 0 rgba(0, 0, 0, 0.2);
+    padding: 10rem 2rem 10rem 5rem;
+    gap: 3rem;
 }
 
 .section5{
@@ -223,11 +251,12 @@ main{
 }
 
 .review{
-    width: 30rem;
-    min-height: 20rem;
+    width: 45rem;
+    min-height: 30rem;
     background: darkred;
     list-style: none;
     padding: 4rem;
+    margin-top: 5rem;
     border-radius: 0.5rem;
     background: white;
     box-shadow: 0 1rem 1rem 0 rgba(0,0,0,0.2),
@@ -240,13 +269,15 @@ main{
     display: none;
 }
 
-.quote{
-    font-size: 500%;
+.quote img{
     position: absolute;
-    top: 0;
+    top: -20%;
     left: 50%;
     transform: translateX(-50%);
     line-height: 0.5;
+    height: 10rem;
+    width: 10rem;
+    border-radius: 10rem;
 }
 
 .stars{
@@ -254,11 +285,117 @@ main{
 }
 
 .review p {
-    font-size: 65%;
+    font-size: 100%;
     font-style: italic;
     padding-bottom: 2rem;
-    border-bottom: 0.5rem solid rgba(0,0,0,0.2);
+    border-bottom: 0.5rem solid #f4e4dc;
 }
+
+footer nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.links{
+    width: 20%;
+    display: flex;
+    list-style: none;
+    text-decoration: none;
+    justify-content: space-between;
+}
+
+.links li a{
+    color: black;
+}
+
+
+/* Producten overzicht */
+
+.Productenoverzicht1{
+    font-size: 2rem;
+    background: #eee;
+    font-family: sans-serif;
+    padding: 8rem;
+}
+
+.inputs{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 4rem;
+    width: 100%;
+    margin-bottom: 4rem;
+    margin-left: 2rem;
+    flex-wrap: wrap;
+}
+
+.inputs > div{
+    display: flex;
+    align-items: center;
+    width: 40rem;
+}
+
+.filter{
+    width: 5rem;
+    height: 5rem;
+    margin-right: 2rem;
+    -webkit-appearance: none;
+    appearance: none;
+    background: #eee;
+    border-radius: 0.5rem;
+    box-shadow: inset 0 0 0.5rem 0 rgba(0,0,0,0.2);
+}
+
+.filter:checked{
+    background: pink;
+}
+
+.filter:checked ~ .label{
+    text-decoration: underline;
+}
+
+.games{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    align-items: center;
+}
+
+.game{
+    list-style: none;
+    width: 25rem;
+    height: 30rem;
+    transition: 0.2s transform;
+    flex-grow: 1;
+}
+
+.game:hover{
+    transform: scale(1.02) translateY(-0.7rem);
+    cursor: pointer;
+}
+
+.game img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+/*GameCard Animation*/
+@keyframes away {
+    from{
+        transform: scaleX(1);
+    }
+    to{
+        transform: scaleX(0);
+    }
+}
+
+
+/*reviews fadeIn*/
 
 @keyframes fadeIn{
     from{
@@ -270,4 +407,6 @@ main{
         filter: blur(0);
     }
 }
+
+
 
