--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ nav{
     display: flex;
     gap: 5rem;
     align-items: center;
-    font-size: 4rem;
+    font-size: 2.5rem;
 }
 
 .navigation div li a{
@@ -251,7 +251,7 @@ nav{
 }
 
 .review{
-    width: 45rem;
+    width: 35rem;
     min-height: 30rem;
     background: darkred;
     list-style: none;
@@ -321,14 +321,19 @@ footer nav{
     padding: 8rem;
 }
 
+.input-filters{
+    display: flex;
+}
+
 .inputs{
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
     gap: 4rem;
-    width: 100%;
-    margin-bottom: 4rem;
-    margin-left: 2rem;
+    width: 25%;
+    margin-bottom: 5rem;
+    margin-left: 3.5rem;
     flex-wrap: wrap;
 }
 
@@ -337,6 +342,41 @@ footer nav{
     align-items: center;
     width: 40rem;
 }
+
+.dropbtn {
+    background-color: #2e2e2e;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+  
+.dropdownbox {
+    position: relative;
+    display: inline-block;
+}
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+  
+.dropdown-content a:hover {background-color: #ddd;}
+  
+.dropdown:hover .dropdown-content {display: block;}
+  
+.dropdown:hover .dropbtn {background-color: #2e2e2e;}
 
 .filter{
     width: 5rem;
@@ -363,14 +403,17 @@ footer nav{
     flex-wrap: wrap;
     gap: 2rem;
     align-items: center;
+    justify-content: center;
 }
 
 .game{
     list-style: none;
-    width: 25rem;
-    height: 30rem;
+    width: 32rem;
+    height: 65rem;
     transition: 0.2s transform;
-    flex-grow: 1;
+    border: solid rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1rem 1rem 0 rgba(0,0,0,0.2),
+    inset 0 -1rem 1rem -1rem rgba(0,0,0,0.2);
 }
 
 .game:hover{
@@ -380,8 +423,25 @@ footer nav{
 
 .game img{
     width: 100%;
+    height: 62%;
+    object-fit: fill;
+    border-bottom: solid rgba(0, 0, 0, 0.1);
+}
+
+.game div{
+    display: flex;
+    flex-direction: column;
+    height: 38%;
+    align-items: flex-start;
+    padding: 2rem;
+    font-size: 1.5rem;
+}
+
+.price{
     height: 100%;
-    object-fit: contain;
+    display: flex;
+    align-items: flex-end;
+    padding: 2rem 0 1rem 0;
 }
 
 /*GameCard Animation*/
@@ -407,6 +467,5 @@ footer nav{
         filter: blur(0);
     }
 }
-
 
 
