--- a/css/style.css
+++ b/css/style.css
@@ -360,9 +360,10 @@ footer nav{
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    padding: 1.5rem;
 }
   
 .dropdown-content a {
