--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ nav{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 40%;
+    min-width: 50rem;
     box-shadow: 1rem 1rem 5rem 0 rgba(0, 0, 0, 0.2);
     padding: 10rem 2rem 10rem 5rem;
     gap: 3rem;
@@ -561,4 +561,66 @@ footer nav{
     }
 }
 
+@media screen and (max-width: 1200px){
+
+    .navigation div{
+        font-size: 2rem;
+        padding-left: 2rem;
+    }
+
+    .top{
+        flex-direction: column;
+    }
+
+    .text{
+        width: 50rem;
+    }
+
+    .section4{
+        flex-direction: column;
+    }
+
+    .section4 figure, img{
+        width: 50rem;
+    }
+    .dropdownbox {
+        margin-left: 3rem;
+    }
+
+    .productinzicht{
+        flex-direction: column;
+    }
+
+    .purchase-price{
+        padding-left: 8rem;
+    }
+
+    .button4{
+        padding: 2rem 1rem 2rem 1rem;
+    }
+
+}
+
+@media screen and (max-width: 720px){
+
+    .logo{
+        width: 30rem;
+    }
+    .navigation div{
+        font-size: 1.5rem;
+    }
+    .dropdownbox {
+        margin-left: 10rem;
+    }
+    .productinzicht{
+        padding: 5rem 15rem 0 5rem;
+        font-size: 100%;
+        gap: 15rem;
+        margin-bottom: 10rem;
+    }
+    .productinzicht img{
+        height: 50rem;
+        border-radius: 0.2rem;
+    }
+}
 
